--- a/templates/notebooks+microdata+rdfa.html
+++ b/templates/notebooks+microdata+rdfa.html
@@ -29,7 +29,7 @@
           property="dateCreated"
           datetime="{{ notebook.time }}">{{ notebook.time }}</time>
 
-    <a href="{{ url_for('masterrequest', notebook_id=notebook) }}">
+    <a href="{{ url_for('masterrequest', notebook_id=notebook_id) }}">
       <span itemprop="name" property="name">{{ notebook.title }}</span>
     </a>
     </div>
