post to add notebook

--- a/templates/notebook+microdata+rdfa.html
+++ b/templates/notebook+microdata+rdfa.html
@@ -4,10 +4,6 @@
 
 <body>
 
-<a href="http://www.w3.org/2012/pyRdfa/extract?uri=referer">
-view data extracted from RDFa markup</a><br>
-<a href="http://getschema.org/microdataextractor?url={{ request.url }}&out=json">
-view data extracted from microdata markup</a><br>  
 <a href="{{ request.path }}.json">
 view data as JSON-LD</a>
 
@@ -33,7 +29,7 @@ view data as JSON-LD</a>
 
   </label>
   <br>
-  <input class="update" type="submit" value="update help request">
+  <input class="update" type="submit" value="update notebook">
   <script>
     var form = document.querySelector('form.help-request-editor');
     var button = document.querySelector('form.help-request-editor input.update');
