post to add notebook

--- a/templates/notebook+microdata+rdfa.html
+++ b/templates/notebook+microdata+rdfa.html
@@ -12,42 +12,42 @@ view data as JSON-LD</a>
 <p class="description" itemprop="description" property="description">{{ notebook.description }}</p>
 
 <p class="from" itemprop="creator" itemscope itemtype="http://schema.org/Person"
-   property="creator" typeof="Person">>
+   property="creator" typeof="Person">
   <span itemprop="email" property="email">{{ notebook.from }}</span>
 </p>
 
 <time itemprop="dateCreated" property="dateCreated"
       datetime="{{ notebook.time }}">{{ notebook.time }}</time>
 
-<form class="help-request-editor" method="patch">
-  <label>priority
+<form class="notebook-editor" method="put">
+  <script>
+      var form = document.querySelector('notebook-editor');
+      var button = document.querySelector('form.notebook-editor input.update');
 
+      button.addEventListener('click', function (event) {
+          event.preventDefault();
+          var request = new XMLHttpRequest();
+          request.open('PUT', window.location.pathname);
+          request.onreadystatechange = function () {
+              if (XMLHttpRequest.DONE === request.readyState
+                  && 200 === request.status) {
+                  window.location.reload(true);
+              }
+          }
+          request.send(new FormData(form));
+      }, false);
+  </script>
+  <label>author
+    <input name="author" type="text" value="{{notebook.author}}">
   </label>
   <br>
-
-  <label>comments<br>
-
+  <label>title
+    <input name="title" type="text" value = {{notebook.title}}>
   </label>
+  <br>
+  <textarea name="description">{{notebook.description}}</textarea>
   <br>
   <input class="update" type="submit" value="update notebook">
-  <script>
-    var form = document.querySelector('form.help-request-editor');
-    var button = document.querySelector('form.help-request-editor input.update');
-
-    button.addEventListener('click', function (event) {
-      event.preventDefault();
-      var request = new XMLHttpRequest();
-      request.open('PATCH', window.location.pathname);
-      request.onreadystatechange = function () {
-        if (XMLHttpRequest.DONE === request.readyState 
-            && 200 === request.status) {
-          window.location.reload(true);
-        }
-      }
-      request.send(new FormData(form));
-    }, false);
-  </script>
 </form>
 
-<a rel="collection" href="{{ url_for('masternotebooklist') }}">all notebooks</a>
 </body>
