--- a/templates/notebooks+microdata+rdfa.html
+++ b/templates/notebooks+microdata+rdfa.html
@@ -48,5 +48,5 @@
   <br>
   <textarea name="description"></textarea>
   <br>
-  <input class="create" type="submit" value="create new request">
+  <input class="create" type="submit" value="create new notebook">
 </form>
