add return to notebooks and references to notebook

--- a/templates/notebook+microdata+rdfa.html
+++ b/templates/notebook+microdata+rdfa.html
@@ -51,4 +51,10 @@ view data as JSON-LD</a>
         request.send(new FormData(form));
     }, false);
 </script>
+
+<a rel="collection" href="{{ url_for('masternotebooklist') }}">all notebooks</a>
+
+
+
+
 </body>
