--- a/templates/notebooks+microdata+rdfa.html
+++ b/templates/notebooks+microdata+rdfa.html
@@ -38,8 +38,8 @@
 </ol>
 
 <form class="notebook-editor" action="{{ url_for('masternotebooklist') }}" method="post">
-  <label>author
-    <input name="author" type="text">
+  <label>creator
+    <input name="creator" type="text">
   </label>
   <br>
   <label>title
