--- a/templates/reference+microdata+rdfa.html
+++ b/templates/reference+microdata+rdfa.html
@@ -7,9 +7,9 @@
   <a href="{{ request.path }}.json">
   view data as JSON-LD</a>
 
-  <h1 class="title" itemprop="name" property="name">{{ reference.title }}</h1>  
+  <h1 class="title" itemprop="name" property="name">Reference Title: {{ reference.title }}</h1>  
 
-  <p class="comment" itemprop="comment" property="comment">{{ reference.comment }}</p>
+  <p class="comment" itemprop="comment" property="comment">Reference Comment: {{ reference.comment }}</p>
 
   <div>
      <span>Reference URL: <a rel="link" href="{{reference.link}}">{{reference.link}}</a></span>
