--- a/templates/reference+microdata+rdfa.html
+++ b/templates/reference+microdata+rdfa.html
@@ -7,16 +7,15 @@
   <a href="{{ request.path }}.json">
   view data as JSON-LD</a>
 
-  <h1 class="title" itemprop="name" property="name">{{ reference.title }}</h1>  
+  <h1 class="title" itemprop="name" property="name">{{ reference.reference }}</h1>  
 
   <p class="comment" itemprop="comment" property="comment">{{ reference.comment }}</p>
 
   <div>
-     <span>Reference URL: <a rel="link" href="{{reference.link}}">{{reference.link}}</a></span>
+     <span>Reference URL: <a rel="url" href="{{reference.link}}">{{reference.link}}</a></span>
   </div>
 
-	<h2>Update the Reference</h2>
-  
+	<h4>Update the Reference</h4>
   <form class="reference-editor" method="put">
 
     <label>Reference Title
@@ -40,7 +39,6 @@
     button.addEventListener('click', function (event) {
         event.preventDefault();
         var request = new XMLHttpRequest();
-        alert("doing put");
         request.open('PUT', window.location.pathname);
         request.onreadystatechange = function () {
             if (XMLHttpRequest.DONE === request.readyState
