changes to README and templates to better incorporate link attributes

--- a/templates/notebooks+microdata+rdfa.html
+++ b/templates/notebooks+microdata+rdfa.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<link rel="alternate" type="application/json" href="{{ request.path }}.json">
+<link type="application/json" href="{{ request.path }}.json">
 <title>All notebooks</title>
 
 {% if request.args["sort_by"] == "time" %}
