--- a/templates/notebook+microdata+rdfa.html
+++ b/templates/notebook+microdata+rdfa.html
@@ -4,7 +4,7 @@
 
 <body>
 
-<a href="{{ request.path }}.json">
+<a rel="alternate" href="{{ request.path }}.json">
 view data as JSON-LD</a>
 
 <div>
@@ -56,7 +56,7 @@ view data as JSON-LD</a>
   {% for reference_id in notebook.references %}
     <li>
       <div>
-        <a href="{{ url_for('reference', notebook_id=notebook_id, reference_id=reference_id) }}">
+        <a rel="item" href="{{ url_for('reference', notebook_id=notebook_id, reference_id=reference_id) }}">
           <span itemprop="name" property="name" >{{notebook.references[reference_id].reference}}</span>
         </a>
       </div>
