Remove `comment` and just use `description`.

--- a/templates/notebook+microdata+rdfa.html
+++ b/templates/notebook+microdata+rdfa.html
@@ -31,8 +31,8 @@ view data as JSON-LD</a>
     <input name="link" type="text">
   </label>
   <br>
-  <label>Reference Comment
-    <textarea name="comment"></textarea>
+  <label>Reference Description
+    <textarea name="description"></textarea>
   </label>
   <br>
   <input class="create" type="submit" value="Add New Reference">
