Fix bug when title has multiple words.

--- a/templates/notebook+microdata+rdfa.html
+++ b/templates/notebook+microdata+rdfa.html
@@ -47,7 +47,7 @@ view data as JSON-LD</a>
   </label>
   <br>
   <label>title
-    <input name="title" type="text" value = {{notebook.title}}>
+    <input name="title" type="text" value="{{notebook.title}}">
   </label>
   <br>
   <textarea name="description">{{notebook.description}}</textarea>
